[package]
name = "markdown"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "DX Markdown (DXM) - Next-generation documentation format optimized for AI, machines, and humans"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen", "console_error_panic_hook"]

[dependencies]
# Internal dependencies
dx-serializer = { path = "../serializer", features = ["tiktoken"] }

# Core dependencies
thiserror = { workspace = true }
memchr = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Binary serialization (RKYV for machine format - default)
rkyv = { version = "0.8" }

# Markdown parsing
pulldown-cmark = "0.10"

# Tokenizer for token counting
tiktoken-rs = "0.5"

# Regex for text processing
regex = "1.10"
once_cell = "1.19"

# FIGlet fonts for beautiful ASCII art headers
figlet-rs = "0.1"

# WASM support (optional)
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
proptest = "1.4"
tempfile = "3.10"
criterion = { version = "0.5", features = ["html_reports"] }
walkdir = "2.5"
flate2 = "1.0"
rayon = "1.10"
indicatif = "0.17"
console = "0.15"

[dependencies.walkdir]
version = "2.5"

[[bench]]
name = "compiler_bench"
harness = false

[lints.clippy]
# Enforce workspace-level safety standards for stable API
undocumented_unsafe_blocks = "deny"
unwrap_used = "deny"
expect_used = "deny"
correctness = "deny"
perf = "warn"

# Style preferences that don't affect correctness
manual_strip = "allow"
should_implement_trait = "allow"
field_reassign_with_default = "allow"
if_same_then_else = "allow"
only_used_in_recursion = "allow"
let_and_return = "allow"

# Note: Experimental modules (benchmark, git, llm_models) may use
# #[allow(clippy::unwrap_used)] locally as they are not part of stable API
