[package]
name = "dx-media"
version = "1.0.0"
edition.workspace = true
rust-version = "1.85"
authors.workspace = true
description = "Universal digital asset acquisition engine - One command, any media, from anywhere"
license.workspace = true
repository.workspace = true
homepage = "https://github.com/anthropics/dx-media"
documentation = "https://docs.rs/dx-media"
keywords = ["media", "assets", "download", "cli", "api"]
categories = ["command-line-utilities", "multimedia", "web-programming"]
readme = "README.md"
exclude = [
    "target/",
    ".git/",
    ".github/",
    ".env",
    "*.log",
    "test_*",
    "cache/",
    "temp/",
]

[[bin]]
name = "dx"
path = "src/main.rs"

[[bin]]
name = "media"
path = "src/bin/media.rs"

[lib]
name = "dx_media"
path = "src/lib.rs"

# ═══════════════════════════════════════════════════════════════
# FEATURE FLAGS (Binary Dawn Architecture)
# ═══════════════════════════════════════════════════════════════

[features]
default = ["cli", "archive-core", "utility-core"]

# CLI
cli = []

# Image Processing (Native Rust)
image-core = ["dep:image", "dep:imageproc"]
image-advanced = ["image-core", "dep:oxipng"]
image-qr = ["dep:qrcode"]
image-svg = ["dep:resvg", "dep:usvg", "dep:tiny-skia", "image-core"]

# Audio Processing (Native Rust)
audio-core = ["dep:symphonia", "dep:hound"]
audio-tags = ["dep:lofty"]

# Document Processing
document-core = ["dep:lopdf", "dep:pulldown-cmark"]

# Archive Processing (Native Rust)
archive-core = ["dep:zip", "dep:tar", "dep:flate2"]

# Memory Mapping
mmap = ["dep:memmap2"]

# Utility
utility-core = []

# Full native processing (all features)
full-native = [
    "image-advanced",
    "image-qr",
    "image-svg",
    "audio-core",
    "audio-tags",
    "document-core",
    "archive-core",
    "utility-core",
]

# ═══════════════════════════════════════════════════════════════
# CORE DEPENDENCIES
# ═══════════════════════════════════════════════════════════════

[dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# HTTP & Networking
reqwest = { version = "0.12", features = [
    "json",
    "stream",
    "rustls-tls",
    "gzip",
    "brotli",
] }
url = "2"

# Web Scraping
scraper = "0.22"
regex = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dx-serializer = { path = "../serializer" }

# CLI & Terminal
clap = { version = "4", features = ["derive", "env", "wrap_help", "color"] }
indicatif = "0.17"
console = "0.15"
colored = "2"

# Error Handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Icon and Font support (for unified CLI)
dx-icons = { path = "icon" }
dx-font = { path = "font" }

# File System
tempfile = "3"
directories = "5"
dirs = "5"
sanitize-filename = "0.6"
walkdir = "2"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
urlencoding = "2.1"
dotenvy = "0.15"
once_cell = "1"
strum = { version = "0.26", features = ["derive"] }

# Parallel Processing (CPU-bound work)
rayon = "1.10"

# ═══════════════════════════════════════════════════════════════
# OPTIONAL DEPENDENCIES (Feature-Gated - Binary Dawn)
# ═══════════════════════════════════════════════════════════════

# Image Processing
image = { version = "0.25", optional = true, default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "webp",
    "ico",
    "bmp",
    "tiff",
] }
imageproc = { version = "0.25", optional = true }
oxipng = { version = "9.1", optional = true }
qrcode = { version = "0.14", optional = true }

# SVG Processing (Native Rust - no ImageMagick needed)
resvg = { version = "0.43", optional = true }
usvg = { version = "0.43", optional = true }
tiny-skia = { version = "0.11", optional = true }

# Audio Processing
symphonia = { version = "0.5", optional = true, features = [
    "mp3",
    "aac",
    "flac",
    "ogg",
    "wav",
    "pcm",
] }
hound = { version = "3.5", optional = true }
lofty = { version = "0.21", optional = true }

# Document Processing
lopdf = { version = "0.34", optional = true }
pulldown-cmark = { version = "0.12", optional = true }

# Archive Processing
zip = { version = "2.2", optional = true, default-features = false, features = [
    "deflate",
    "aes-crypto",
] }
tar = { version = "0.4", optional = true }
flate2 = { version = "1.0", optional = true }

# Memory Mapping
memmap2 = { version = "0.9", optional = true }

# ═══════════════════════════════════════════════════════════════
# DEV DEPENDENCIES
# ═══════════════════════════════════════════════════════════════

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1"
wiremock = "0.6"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
assert-json-diff = "2"

[[bench]]
name = "search_bench"
harness = false
path = "benches/search_bench.rs"
