[package]
name = "dx-style"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Binary-first CSS engine with zero-copy parsing and DX Serializer output"
license.workspace = true
repository.workspace = true
keywords = ["css", "styling", "binary", "zero-copy", "dx-serializer"]
categories = ["development-tools", "web-programming", "parser-implementations"]

[lib]
name = "style"
path = "src/lib.rs"

[dependencies]
indexmap = { version = "2.3.0", default-features = false }
images = { package = "image", version = "0.25.2", optional = true }
libm = { version = "0.2.8", optional = true }
ahash = "0.8.12"
colored = "3.0.0"
cssparser = "0.35.0"
memchr = "2.7.5"
memmap2 = "0.9.5"
notify = "8.2.0"
notify-debouncer-full = "0.6.0"
rayon = "1.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
dx-serializer = { path = "../serializer", features = ["converters"] }
smallvec = "1.13.2"
seahash = "4.1.0"
twoway = "0.2"
winapi = { version = "0.3", features = [
    "wincon",
    "consoleapi",
    "minwindef",
    "processenv",
    "winbase",
] }
lightningcss = "1.0.0-alpha.67"
# Additional performance optimization dependencies
rustc-hash = "2.0"
lasso = { version = "0.7.2", optional = true }
bumpalo = { version = "3.14", features = ["collections"] }
lazy_static = "1.4.0"
once_cell = "1.20.2"
bytemuck = "1.19.0"
regex = "1.11.1"
thiserror = "2.0"
tracing = "0.1"
# Perfect hash and SIMD optimizations
phf = { version = "0.11", features = ["macros"] }
jetscii = "0.5"

[dev-dependencies]
tempfile = "3.14.0"
criterion = { version = "0.5", features = ["html_reports"] }
float-cmp = "0.9"
reqwest = "0.12.5"
tokio = { version = "1.39.2", features = ["rt", "macros"] }
proptest = "1.4"

[[bench]]
name = "style_benchmark"
harness = false

[[bench]]
name = "binary_styles_benchmark"
harness = false

[[bench]]
name = "atomic_benchmark"
harness = false

[[bin]]
name = "analyze_styles"
path = "src/bin/analyze_styles.rs"

[[example]]
name = "hybrid_demo"
path = "examples/hybrid_demo.rs"

[[example]]
name = "hybrid_standalone"
path = "examples/hybrid_standalone.rs"

[build-dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
dx-serializer = { path = "../serializer", features = ["converters"] }
phf_codegen = "0.11"
seahash = "4.1.0"

[features]
eager-flush = []
default = ["std", "image", "string-interning", "fast-hash"]
std = ["indexmap/std", "ahash/std", "ahash/runtime-rng"]
image = ["dep:images"]
libm = ["dep:libm"]
string-interning = ["dep:lasso"]
fast-hash = []
arena-alloc = []
